<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:background="@color/_00cc99" >

        <TextView
            android:id="@+id/title"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:paddingLeft="@dimen/_40dp"
            android:paddingRight="@dimen/_40dp"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/go_class" />

        <yjpty.teaching.views.FilterImageView
            android:id="@+id/previos_class"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:paddingLeft="@dimen/_10dp"
            android:paddingRight="@dimen/_20dp"
            android:src="@drawable/yjpty_previous" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:paddingBottom="@dimen/_5dp"
            android:paddingLeft="@dimen/_10dp"
            android:paddingRight="@dimen/_10dp"
            android:paddingTop="@dimen/_5dp"
            android:text="@string/zhuke"
            android:textColor="@color/yjpty_main_teacher_button_selector"
            android:textSize="@dimen/_14sp" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/__2dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:paddingBottom="@dimen/_5dp"
            android:paddingLeft="@dimen/_10dp"
            android:paddingRight="@dimen/_10dp"
            android:paddingTop="@dimen/_5dp"
            android:text="@string/weike"
            android:textColor="@color/yjpty_main_teacher_button_selector"
            android:textSize="@dimen/_14sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1dp"
            android:layout_weight="1"
            android:background="@color/_00cc99" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_1dp"
            android:layout_weight="1" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#00cc99"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1px"
                android:background="#10b896" />

            <TextView
                android:id="@+id/open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00cc99"
                android:drawableRight="@drawable/yjpty_ic_hardware_keyboard_arrow_up"
                android:gravity="right"
                android:padding="@dimen/_7dp"
                android:text="@string/close"
                android:textColor="@color/_ffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1px"
                android:background="#30b896" />

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_10dp" >

                    <TextView
                        android:id="@+id/darkscreen"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/yjpty_touch"
                        android:gravity="center"
                        android:paddingBottom="@dimen/_10dp"
                        android:paddingTop="@dimen/_10dp"
                        android:text="@string/darkscreen"
                        android:textColor="@color/_ffffff"
                        android:textSize="@dimen/_12sp" />

                    <TextView
                        android:id="@+id/brightenscreen"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/yjpty_touch"
                        android:gravity="center"
                        android:paddingBottom="@dimen/_10dp"
                        android:paddingTop="@dimen/_10dp"
                        android:text="@string/brightenscreen"
                        android:textColor="@color/_ffffff"
                        android:textSize="@dimen/_12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_10dp" >

                    <yjpty.teaching.views.FilterImageView
                        android:id="@+id/last"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/_7dp"
                        android:src="@drawable/yjpty_ic_av_skip_previous" />

                    <yjpty.teaching.views.FilterImageView
                        android:id="@+id/play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_40dp"
                        android:layout_marginRight="@dimen/_40dp"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/_7dp"
                        android:src="@drawable/yjpty_ic_navigation_refresh" />

                    <yjpty.teaching.views.FilterImageView
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        android:padding="@dimen/_7dp"
                        android:src="@drawable/yjpty_ic_av_skip_next" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_10dp" >

                    <TextView
                        android:id="@+id/pause"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/yjpty_touch"
                        android:gravity="center"
                        android:paddingBottom="@dimen/_10dp"
                        android:paddingTop="@dimen/_10dp"
                        android:text="@string/pause"
                        android:textColor="@color/_ffffff"
                        android:textSize="@dimen/_12sp" />

                    <TextView
                        android:id="@+id/resume"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/yjpty_touch"
                        android:gravity="center"
                        android:paddingBottom="@dimen/_10dp"
                        android:paddingTop="@dimen/_10dp"
                        android:text="@string/resume"
                        android:textColor="@color/_ffffff"
                        android:textSize="@dimen/_12sp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginRight="@dimen/_20dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/_10dp" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal" >

                            <yjpty.teaching.views.FilterImageView
                                android:id="@+id/video_last"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/app_name"
                                android:padding="@dimen/_5dp"
                                android:src="@drawable/yjpty_video_last" />

                            <yjpty.teaching.views.FilterImageView
                                android:id="@+id/video_add"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/app_name"
                                android:padding="@dimen/_5dp"
                                android:src="@drawable/yjpty_video_add" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/video"
                            android:textColor="@color/_ffffff"
                            android:textSize="@dimen/_12sp" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90dp"
                    android:contentDescription="@string/app_name"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>